# unit_testing_upc

./: CMakeLists.txt  clean.sh  rebuild.sh
src/: CMakeLists.txt  main.c  money.c  money.h
tests/: CMakeLists.txt  check_money.c
